--- a/templates/forum/index.html.twig
+++ b/templates/forum/index.html.twig
@@ -22,8 +22,8 @@
 			</ul>
 			<p>Bon voyage sur le forum !</p>
 		</div>
-		<div id="test" class="forumRoomSearch">
-			<input type="text" placeholder="Rechercher un sujet de discussion">
+		<div id="arrow" class="forumRoomSearch">
+			<input class="forumRoomSearch__input" type="text" placeholder="Rechercher un sujet de discussion">
 		</div>
 		<div class="roomGrid">
 			<div class="roomGridHeader">
@@ -60,8 +60,8 @@
 			{% endif %}
 			pour en créer une :
 		</div>
-		<span class="arrow">
-			<a href="#test"><img src="assets/img/arrow.png"></a>
-		</span>
 	</div>
+		<span class="arrow">
+			<a href="#arrow"><img class="arrow__img" src="assets/img/arrow.png" src="Haut de page"></a>
+		</span>
 {% endblock %}
