--- a/public/assets/sass/_chat.scss
+++ b/public/assets/sass/_chat.scss
@@ -1,6 +1,20 @@
 textarea {
     width: 100%;
-    height: 200px;
+    height: 100px;
     background-color: #1d1d1d;
     color: #fff;
+    resize: none;
+    outline: none;
+    border-bottom: none;
+    border-right: none;
+    border-left: none;
+}
+
+.newChat__h4 {
+    text-align: end;
+    margin: 10px 10px 10px 0;
+}
+
+.newChat__submit {
+    margin: 7px 0px 10px 7px;
 }
