--- a/public/assets/sass/_register.scss
+++ b/public/assets/sass/_register.scss
@@ -1,10 +1,10 @@
 .register__h1 {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-style: italic;
-    font-size: 60px;
-    line-height: 130px;
+    font-size: 70px;
     text-align: center;
     letter-spacing: 0.05em;
+    margin: 80px 0 100px 0;
 
     color: #fff;
     text-shadow:  0 0 7px #fff, 
