--- a/templates/chat/new.html.twig
+++ b/templates/chat/new.html.twig
@@ -4,27 +4,23 @@
 {% endblock %}
 
 {% block body %}
-	<h4>Nouveau message</h4>
+<div class="container">
+	<h5 class="newChat__h4">Nouveau message</h5>
 	{{ form_start(form) }}
 
-	{{ form_widget(form.commentary)}}
-
-	{{ form_widget(form.date) }}
-
+	{{ form_widget(form.commentary, {'attr' : {'placeholder' : 'Tapez votre message ici ...'} })}}
 
 	{# Récupérer l'id du user connecté#}
+	{{ form_widget(form.user, {'value' : app.user}) }}
 
-	{{ form_row(form.user, {'data': app.user.id}) }}
-	<input value={{ app.user.id }}>
+	{{ form_widget(form.room, {'value': room.id}) }}
 
-	{{ form_row(form.room, {'data': room.id}) }}
-	<input name="chat[room]" value="{{ room.id }}">
-
-	<button class="btn">{{ button_label|default('Envoyer') }}</button>
+	<button class="btn btn-outline-light btn-lg newChat__submit">{{ button_label|default('Envoyer') }}</button>
 
 	{{ form_end(form) }}
 
 
 	{# {{ include('chat/_form.html.twig') }} #}
+</div>
 
 {% endblock %}
