--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -13,14 +13,29 @@
           <a class="nav-link" href="#">CATÉGORIES</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_forum')}}">FORUM</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">CONTACT</a>
         </li>
+        {% if (app.user) %}
         <li class="nav-item">
-          <a class="nav-link">CONNEXION</a>
+          <a class="nav-link" href="{{ path('app_logout')}}">DÉCONNEXION</a>
         </li>
+        {% else %}
         <li class="nav-item">
-          <a class="nav-link">INSCRIPTION</a>
+          <a class="nav-link" href="{{ path('app_login')}}">CONNEXION</a>
         </li>
+        {% endif %}
+        {% if (app.user) %}
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src={{app.user.picture}} alt="PROFIL" style="height : 30px" class='rounded-pill'></a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_register')}}">INSCRIPTION</a>
+        </li>
+        {% endif %}
         <li class="nav-item">
           <a class="nav-link"><i class="fa-solid fa-basket-shopping fa-1x"></i></a>
         </li>
