--- a/templates/room/show.html.twig
+++ b/templates/room/show.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<div id="arrow" class="container">
+	<div class="container">
 		<a href="{{ path('app_forum') }}"><button class="room__button__returnForum" style="vertical-align:middle"><span>Retourner sur le forum </span></button></a>
 		<div class="roomTitleContainer">
 			<div class="roomTitleContainer__header">
