--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -442,3 +442,22 @@ textarea {
 .check_email {
   text-align: center;
 }
+
+.table {
+  color: #fff;
+}
+
+.profile__picture {
+  height: 120px;
+}
+
+.profil__h1 {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-style: italic;
+  font-size: 50px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  margin: 80px 0 100px 0;
+  color: #fff;
+  text-shadow: 0 0 7px #fff, 0 0 2px #fff, 0 0 42px rgb(0, 204, 255), 0 0 77px rgb(0, 204, 255), 0 0 100px rgb(0, 204, 255);
+}
