--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -6,40 +6,40 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+        <li class="nav-item pt-1">
           <a class="nav-link" aria-current="page" href="#">NOUVEAUTÉS/TENDANCES</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item pt-1">
           <a class="nav-link" href="#">CATÉGORIES</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item pt-1">
           <a class="nav-link" href="{{ path('app_forum')}}">FORUM</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item pt-1">
           <a class="nav-link" href="#">CONTACT</a>
         </li>
         {% if (app.user) %}
-        <li class="nav-item">
+        <li class="nav-item pt-1">
           <a class="nav-link" href="{{ path('app_logout')}}">DÉCONNEXION</a>
         </li>
         {% else %}
-        <li class="nav-item">
+        <li class="nav-item pt-1">
           <a class="nav-link" href="{{ path('app_login')}}">CONNEXION</a>
         </li>
         {% endif %}
         {% if (app.user) %}
         <li class="nav-item">
-          <a class="nav-link" href="#"><img src={{app.user.picture}} alt="PROFIL" style="height : 30px" class='rounded-pill'></a>
+          <a class="nav-link" href="{{ path('app_profile_show')}}"><img src="/uploads/pictures/{{ app.user.picture }}" alt="PROFIL" style="height : 35px" class='rounded-pill'></a>
         </li>
         {% else %}
-        <li class="nav-item">
+        <li class="nav-item pt-1">
           <a class="nav-link" href="{{ path('app_register')}}">INSCRIPTION</a>
         </li>
         {% endif %}
-        <li class="nav-item">
+        <li class="nav-item pt-1">
           <a class="nav-link"><i class="fa-solid fa-basket-shopping fa-1x"></i></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item pt-1">
           <a class="nav-link"><i class="fa-solid fa-magnifying-glass fa-1x"></i></a>
         </li>
       </ul>
