--- a/public/assets/sass/_profile.scss
+++ b/public/assets/sass/_profile.scss
@@ -1,23 +1,75 @@
-.table {
-  color: #fff;
+.profile__header {
+  background-color: #0c0c0c;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  .profile__h1 {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-style: italic;
+    font-size: 70px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    margin: 80px 60px 100px 0;
+    
+    color: #fff;
+    text-shadow:  0 0 7px #fff, 
+    0 0 2px #fff, 
+    0 0 42px rgb(0, 204, 255),   
+    0 0 77px rgb(0, 204, 255), 
+    0 0 100px rgb(0, 204, 255) 
+  }
+  .profile__picture {
+    height: 180px;
+    border: 3px solid #008cff;
+    box-shadow: 0px 0px 8px 8px rgba(4, 154, 241, 0.5);
+  }
+}
+.profile__description {
+  text-align: center;
+  border-bottom: 1px solid #008cff;
+  font-size: 25px;
+}
+.profile__div__table {
+  display: flex;
+  justify-content: center;
+  .profile__table {
+    th {
+      text-align: end;
+      font-size: 25px;
+    }
+    tr {
+      height: 80px;
+    }
+    td {
+      width: 250px;
+      padding-left: 40px;
+      font-size: 20px;
+    }
+  }
+  
+}
+.profile__linkEdit {
+  text-align: center;
 }
 
-.profile__picture {
-  height: 120px;
-}
+//*******************************************************
+//******************** PROFILE EDIT *********************
+//*******************************************************
 
-.profil__h1 {
+.profile__edit__h1 {
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-style: italic;
   font-size: 50px;
   text-align: center;
   letter-spacing: 0.05em;
-  margin: 80px 0 100px 0;
+  margin: 80px 60px 80px 0;
 
   color: #fff;
   text-shadow:  0 0 7px #fff, 
-      0 0 2px #fff, 
-      0 0 42px rgb(0, 204, 255),   
-      0 0 77px rgb(0, 204, 255), 
-      0 0 100px rgb(0, 204, 255) 
+  0 0 2px #fff, 
+  0 0 42px rgb(0, 204, 255),   
+  0 0 77px rgb(0, 204, 255), 
+  0 0 100px rgb(0, 204, 255) 
 }
