--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -503,4 +503,8 @@ textarea {
   margin: 80px 60px 80px 0;
   color: #fff;
   text-shadow: 0 0 7px #fff, 0 0 2px #fff, 0 0 42px rgb(0, 204, 255), 0 0 77px rgb(0, 204, 255), 0 0 100px rgb(0, 204, 255);
+}
+
+.table {
+  color: aliceblue;
 }/*# sourceMappingURL=app.css.map */
