--- a/templates/game/show.html.twig
+++ b/templates/game/show.html.twig
@@ -1,46 +1,47 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Game{% endblock %}
+{% block title %}Game
+{% endblock %}
 
 {% block body %}
-    <h1>Game</h1>
+	<h1>Game</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ game.id }}</td>
-            </tr>
-            <tr>
-                <th>Name_game</th>
-                <td>{{ game.nameGame }}</td>
-            </tr>
-            <tr>
-                <th>ReleaseDate_game</th>
-                <td>{{ game.releaseDateGame ? game.releaseDateGame|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Picture_game</th>
-                <td>{{ game.pictureGame }}</td>
-            </tr>
-            <tr>
-                <th>Price_game</th>
-                <td>{{ game.priceGame }}</td>
-            </tr>
-            <tr>
-                <th>Note_game</th>
-                <td>{{ game.noteGame }}</td>
-            </tr>
-            <tr>
-                <th>IsAvailable</th>
-                <td>{{ game.isAvailable ? 'Yes' : 'No' }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table">
+		<tbody>
+			<tr>
+				<th>Id</th>
+				<td>{{ game.id }}</td>
+			</tr>
+			<tr>
+				<th>Name_game</th>
+				<td>{{ game.nameGame }}</td>
+			</tr>
+			<tr>
+				<th>ReleaseDate_game</th>
+				<td>{{ game.releaseDateGame ? game.releaseDateGame|date('Y-m-d') : '' }}</td>
+			</tr>
+			<tr>
+				<th>Picture_game</th>
+				<td>{{ game.pictureGame }}</td>
+			</tr>
+			<tr>
+				<th>Price_game</th>
+				<td>{{ game.priceGame }}</td>
+			</tr>
+			<tr>
+				<th>Note_game</th>
+				<td>{{ game.noteGame }}</td>
+			</tr>
+			<tr>
+				<th>IsAvailable</th>
+				<td>{{ game.isAvailable ? 'Yes' : 'No' }}</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_game_index') }}">back to list</a>
+	<a href="{{ path('app_home') }}" class="btn btn-dark">Retourner sur la page du magasin</a>
 
-    <a href="{{ path('app_game_edit', {'id': game.id}) }}">edit</a>
+	<a href="#" class="btn btn-success">Ajouter au panier</a>
 
-    {{ include('game/_delete_form.html.twig') }}
+
 {% endblock %}
