--- a/templates/home/gamesDisplay.html.twig
+++ b/templates/home/gamesDisplay.html.twig
@@ -2,12 +2,14 @@
     {{ dump(categories) }}
 </pre> #}
 <div class="container mt-5 mb-5">
-    <div class="d-flex justify-content-center row row-cols-3">
-        {% for game in games|slice(0, 9) %}
-            <div class="col mt-3">
-                <a href="#"><div class="categoryDiv gameDiv" style="background-image: url({{ game.PictureGame }})"></div></a>
-                <p class="mt-3">{{ game.NameGame }}</p>
-            </div>
-        {% endfor %}
-    </div>
+	<div class="d-flex justify-content-center row row-cols-3">
+		{% for game in games|slice(0, 9) %}
+			<div class="col mt-3">
+				<a href="{{ path('app_game_show', {id: game.id}) }}">
+					<div class="categoryDiv gameDiv" style="background-image: url({{ game.PictureGame }})"></div>
+				</a>
+				<p class="mt-3">{{ game.NameGame }}</p>
+			</div>
+		{% endfor %}
+	</div>
 </div>
