--- a/templates/game/show.html.twig
+++ b/templates/game/show.html.twig
@@ -41,7 +41,9 @@
 
 	<a href="{{ path('app_home') }}" class="btn btn-dark">Retourner sur la page du magasin</a>
 
-	<a href="#" class="btn btn-success">Ajouter au panier</a>
+	<a href="{{ path('app_cart_add', {id: game.id}) }}" class="btn btn-success">
+		<i class="fa-solid fa-cart-plus fa-1x"></i>
+		Ajouter au panier</a>
 
 
 {% endblock %}
