--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -1,20 +1,67 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CartController!{% endblock %}
+{% block title %}Panier - POG
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<div class="container">
+		<h1 class="cart__h1">Votre panier</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/Test_React/POG/src/Controller/CartController.php'|file_link(0) }}">src/Controller/CartController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/Test_React/POG/templates/cart/index.html.twig'|file_link(0) }}">templates/cart/index.html.twig</a></code></li>
-    </ul>
-</div>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Produit</th>
+					<th>Prix</th>
+					<th>Quantité</th>
+					<th>Total</th>
+					<th>Actions</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for element in dataPanier %}
+					<tr>
+						<td><img src={{ element.game.getPictureGame() }}>
+							{{ element.game.getNameGame() }}</td>
+						<td>{{ element.game.getPriceGame() }}
+							€</td>
+						<td>{{ element.quantity }}</td>
+						<td>{{ element.quantity * element.game.getPriceGame() }}
+							€</td>
+						<td>
+							<a href="{{path('app_cart_add', {id: element.game.id})}}" class="btn btn-success">
+								<i class="fa-solid fa-plus fa-1x"></i>
+							</a>
+							<a href="{{path('app_cart_remove', {id: element.game.id})}}" class="btn btn-warning">
+								<i class="fa-solid fa-minus fa-1x"></i>
+							</a>
+							<a href="{{path('app_cart_delete', {id: element.game.id})}}" class="btn btn-danger">
+								<i class="fa-solid fa-xmark fa-1x"></i>
+							</a>
+						</td>
+					</tr>
+				{% else %}
+					<tr>
+						<td colspan="5" class="text-center">Votre panier est vide</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+			<tfoot>
+				<tr>
+					<td colspan="3">Total</td>
+					<td class="text-end">{{ total }}
+						€</td>
+					<td>
+						<a href="{{path('app_cart_delete_all')}}" class="btn btn-danger">
+							<i class="fa-solid fa-xmark fa-1x"></i>
+						</a>
+					</td>
+				</tr>
+			</tfoot>
+		</table>
+
+		<a class="btn btn-dark" href="{{ path('app_home')}}">Retourner sur la page du magasin</a>
+	</div>
+
+
 {% endblock %}
