--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,48 +1,54 @@
 <nav class="navbar navbar-expand-lg bg-dark navColors" data-bs-theme="dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><i class="fa-solid fa-house"></i></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item pt-1">
-          <a class="nav-link" aria-current="page" href="#">NOUVEAUTÉS/TENDANCES</a>
-        </li>
-        <li class="nav-item pt-1">
-          <a class="nav-link" href="#">CATÉGORIES</a>
-        </li>
-        <li class="nav-item pt-1">
-          <a class="nav-link" href="{{ path('app_forum')}}">FORUM</a>
-        </li>
-        <li class="nav-item pt-1">
-          <a class="nav-link" href="#">CONTACT</a>
-        </li>
-        {% if (app.user) %}
-        <li class="nav-item pt-1">
-          <a class="nav-link" href="{{ path('app_logout')}}">DÉCONNEXION</a>
-        </li>
-        {% else %}
-        <li class="nav-item pt-1">
-          <a class="nav-link" href="{{ path('app_login')}}">CONNEXION</a>
-        </li>
-        {% endif %}
-        {% if (app.user) %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_profile_show')}}"><img src="/uploads/pictures/{{ app.user.picture }}" alt="PROFIL" style="height : 35px" class='rounded-pill'></a>
-        </li>
-        {% else %}
-        <li class="nav-item pt-1">
-          <a class="nav-link" href="{{ path('app_register')}}">INSCRIPTION</a>
-        </li>
-        {% endif %}
-        <li class="nav-item pt-1">
-          <a class="nav-link"><i class="fa-solid fa-basket-shopping fa-1x"></i></a>
-        </li>
-        <li class="nav-item pt-1">
-          <a class="nav-link"><i class="fa-solid fa-magnifying-glass fa-1x"></i></a>
-        </li>
-      </ul>
-    </div>
-  </div>
+	<div class="container-fluid">
+		<a class="navbar-brand" href="#">
+			<i class="fa-solid fa-house"></i>
+		</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item pt-1">
+					<a class="nav-link" aria-current="page" href="#">NOUVEAUTÉS/TENDANCES</a>
+				</li>
+				<li class="nav-item pt-1">
+					<a class="nav-link" href="#">CATÉGORIES</a>
+				</li>
+				<li class="nav-item pt-1">
+					<a class="nav-link" href="{{ path('app_forum')}}">FORUM</a>
+				</li>
+				<li class="nav-item pt-1">
+					<a class="nav-link" href="#">CONTACT</a>
+				</li>
+				{% if (app.user) %}
+					<li class="nav-item pt-1">
+						<a class="nav-link" href="{{ path('app_logout')}}">DÉCONNEXION</a>
+					</li>
+				{% else %}
+					<li class="nav-item pt-1">
+						<a class="nav-link" href="{{ path('app_login')}}">CONNEXION</a>
+					</li>
+				{% endif %}
+				{% if (app.user) %}
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_profile_show')}}"><img src="/uploads/pictures/{{ app.user.picture }}" alt="PROFIL" style="height : 35px" class='rounded-pill'></a>
+					</li>
+				{% else %}
+					<li class="nav-item pt-1">
+						<a class="nav-link" href="{{ path('app_register')}}">INSCRIPTION</a>
+					</li>
+				{% endif %}
+				<li class="nav-item pt-1">
+					<a class="nav-link">
+						<i class="fa-solid fa-basket-shopping fa-1x"></i>
+					</a>
+				</li>
+				<li class="nav-item pt-1">
+					<a class="nav-link">
+						<i class="fa-solid fa-magnifying-glass fa-1x"></i>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
 </nav>
