--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -39,7 +39,7 @@
 					</li>
 				{% endif %}
 				<li class="nav-item pt-1">
-					<a class="nav-link">
+					<a class="nav-link" href="{{ path('app_cart')}}">
 						<i class="fa-solid fa-basket-shopping fa-1x"></i>
 					</a>
 				</li>
