--- a/templates/stripe/index.html.twig
+++ b/templates/stripe/index.html.twig
@@ -10,10 +10,7 @@
 				<div class="card">
 					<div class="card-body">
 						{% for message in app.flashes('success') %}
-							<div style="color: green;
-																																																																																																	                                    border: 2px green solid;
-																																																																																																	                                    text-align: center;
-																																																																																																	                                    padding: 5px;margin-bottom: 10px;">
+							<div style="color: green; border: 2px green solid; text-align: center; padding: 5px;margin-bottom: 10px;">
 								{{ message }}
 							</div>
 						{% endfor %}
