--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!
+{% block title %}POG
 {% endblock %}
 
 {% block body %}
@@ -12,7 +12,7 @@
 		<div class="LogoTitle">
 			<h1>PoG</h1>
 		</div>
-		<div class="NavbarMidPosition">
+		<div class="NavbarMidPosition" id="navbar">
 			<div class="FirstNavbarMid">
 				{% block navbar %}
 					{% include 'navbar.html.twig' %}
