--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,7 +10,7 @@
 	</div>
 	<div class="FirstViewBody">
 		<div class="LogoTitle">
-			<h1>PoG</h1>
+			<img alt="Logo POG" src="\assets\img\Pog_logo_006_v007.png" style="height: 185px;">
 		</div>
 		<div class="NavbarMidPosition" id="navbar">
 			<div class="FirstNavbarMid">
