--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -23,6 +23,9 @@
   border-radius: 25px;
   box-shadow: 0px 0px 20px 10px rgba(255, 0, 153, 0.9);
 }
+.FirstViewBody .LogoTitle img {
+  filter: drop-shadow(2px 1px 17px #48dfff);
+}
 .FirstViewBody .LogoTitle h1 {
   color: white;
 }
@@ -37,6 +40,8 @@
 
 .NavbarMidPosition {
   z-index: 999;
+  position: sticky;
+  top: 0;
 }
 
 .marginForCarousel {
@@ -93,4 +98,4 @@
   width: 375px;
   height: 200px;
   margin: 0;
-}/*# sourceMappingURL=home.css.map */
+}
