--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,13 +1,15 @@
-<nav class="navbar navbar-expand-lg bg-dark navColors" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-dark navColors" id="navbar_nav" data-bs-theme="dark">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">
-			<i class="fa-solid fa-house"></i>
-		</a>
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+				<li	class="nav-item pt-2 mt">
+					<a class="navbar-brand" href="{{ path('app_home')}}">
+						<i class="fa-solid fa-house"></i>
+					</a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+				</li>
 				<li class="nav-item pt-1">
 					<a class="nav-link" aria-current="page" href="#">NOUVEAUTÉS/TENDANCES</a>
 				</li>
