--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,6 +4,9 @@
 {% endblock %}
 
 {% block body %}
+	{% block navbar %}
+		{% include 'navbar.html.twig' %}
+	{% endblock %}
 	<div class="container">
 		<div class="row">
 			<div class="col">
