--- a/public/assets/sass/_register.scss
+++ b/public/assets/sass/_register.scss
@@ -4,7 +4,7 @@
     font-size: 70px;
     text-align: center;
     letter-spacing: 0.05em;
-    margin: 80px 0 100px 0;
+    margin-top: 130px;
 
     color: #fff;
     text-shadow:  0 0 7px #fff, 
@@ -14,14 +14,18 @@
         0 0 100px rgb(230, 18, 124) 
 }
 
-.register__legend {
-    font-size: 30px;
-    letter-spacing: 0.05em;
-
-    color: #00b7ff;
-}
-
-.register__button__submit {
-    margin: auto;
-    display: flex;
+.register__form {
+    display:flex; 
+    justify-content: center;
+    .register__legend {
+        font-size: 30px;
+        letter-spacing: 0.05em;
+    
+        color: #00b7ff;
+    }
+    
+    .register__button__submit {
+        margin: auto;
+        display: flex;
+    }
 }
