--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -4,9 +4,11 @@
 {% endblock %}
 
 {% block body %}
-	{% block navbar %}
-		{% include 'navbar.html.twig' %}
-	{% endblock %}
+	<div style="box-shadow: 0px 0px 20px 10px rgba(255,0,153,0.9);">
+		{% block navbar %}
+			{% include 'navbar.html.twig' %}
+		{% endblock %}
+	</div>
 	<div class="container">
 		<h1 class="cart__h1">Votre panier</h1>
 
@@ -23,7 +25,7 @@
 			<tbody>
 				{% for element in dataPanier %}
 					<tr>
-						<td><img src={{ element.game.getPictureGame() }}>
+						<td><img class="cart__img" src={{ element.game.getPictureGame() }}>
 							{{ element.game.getNameGame() }}</td>
 						<td>{{ element.game.getPriceGame() }}
 							€</td>
@@ -51,18 +53,20 @@
 			<tfoot>
 				<tr>
 					<td colspan="3">Total</td>
-					<td class="text-end">{{ total }}
-						€</td>
+					<td class="text-end">{{ total }}€</td>
 					<td>
-						<a href="{{path('app_cart_delete_all')}}" class="btn btn-danger">
-							<i class="fa-solid fa-xmark fa-1x"></i>
+						<a href="{{ path('app_stripe')}}"><button class="btn btn-lg btn-success"><i class="fa-solid fa-cart-shopping fa-1x"></i>Acheter</button></a>
+						<a href="{{path('app_cart_delete_all')}}" class="btn btn-lg btn-danger" style="margin-left:20px;">
+						<i class="fa-solid fa-xmark fa-1x"></i>
 						</a>
 					</td>
 				</tr>
 			</tfoot>
 		</table>
 
-		<a class="btn btn-dark" href="{{ path('app_home')}}">Retourner sur la page du magasin</a>
+		<a href="{{ path('app_home')}}"><button class="room__button__returnForum" style="vertical-align:middle"><span>Retourner sur la page du magasin</span></button></a>
+		<br>
+
 	</div>
 
 
