--- a/templates/forum/index.html.twig
+++ b/templates/forum/index.html.twig
@@ -5,9 +5,11 @@
 
 {% block body %}
 	<div>
-		{% block navbar %}
-			{% include 'navbar.html.twig' %}
-		{% endblock %}
+		<div style="position: fixed; width: 100%; box-shadow: 0px 0px 20px 10px rgba(255,0,153,0.9);">
+			{% block navbar %}
+				{% include 'navbar.html.twig' %}
+			{% endblock %}
+		</div>
 		<h1 class="forum__h1">Forum</h1>
 		<div class="forumRules">
 			<h4 class="forumRules__h4">Bienvenue sur le forum de POG</h4>
