--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-dark navColors" id="navbar_nav" data-bs-theme="dark">
 	<div class="container-fluid">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<a href="{{ path('app_home')}}"><img alt="Logo POG" src="\assets\img\Pog_logo_006_v007.png" class="navbar_logo_pog" style="height: 43px;"></a>
 			<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 				<li	class="nav-item pt-2 mt">
 					<a class="navbar-brand" href="{{ path('app_home')}}">
