--- a/templates/stripe/index.html.twig
+++ b/templates/stripe/index.html.twig
@@ -31,7 +31,7 @@
 						</div>
 
 						</div>
-						<a href="{{ path('app_cart') }}"><button class="btn btn-danger mt-3">Retourner au panier</button></a>
+						<a href="#"><button class="btn btn-danger mt-3">Retourner au panier</button></a>
 					</div>
 				</div>
 			</div>
