--- a/public/assets/sass/_room.scss
+++ b/public/assets/sass/_room.scss
@@ -8,6 +8,7 @@
     transition: all 0.5s;
     cursor: pointer;
     margin-top: 50px;
+    vertical-align:middle;
   }
   .room__button__returnForum span {
     cursor: pointer;
