--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -12,7 +12,7 @@
 	<div class="container">
 		<h1 class="cart__h1">Votre panier</h1>
 
-		<table class="table">
+		<table class="table cart__table">
 			<thead>
 				<tr>
 					<th>Produit</th>
@@ -32,7 +32,7 @@
 						<td>{{ element.quantity }}</td>
 						<td>{{ element.quantity * element.game.getPriceGame() }}
 							€</td>
-						<td>
+						<td class="cart__table__td-actions">
 							<a href="{{path('app_cart_add', {id: element.game.id})}}" class="btn btn-success">
 								<i class="fa-solid fa-plus fa-1x"></i>
 							</a>
@@ -54,19 +54,18 @@
 				<tr>
 					<td colspan="3">Total</td>
 					<td class="text-end">{{ total }}€</td>
-					<td>
-						<a href="{{ path('app_stripe')}}"><button class="btn btn-lg btn-success"><i class="fa-solid fa-cart-shopping fa-1x"></i>Acheter</button></a>
-						<a href="{{path('app_cart_delete_all')}}" class="btn btn-lg btn-danger" style="margin-left:20px;">
-						<i class="fa-solid fa-xmark fa-1x"></i>
+					<td class="cart__table__td-actions">
+						<a href="{{path('app_cart_delete_all')}}" class="btn btn-sm btn-danger">
+						<i class="fa-solid fa-xmark fa-1x cart__icon-deleteAll"></i>Vider le panier
 						</a>
 					</td>
 				</tr>
 			</tfoot>
 		</table>
-
-		<a href="{{ path('app_home')}}"><button class="room__button__returnForum" style="vertical-align:middle"><span>Retourner sur la page du magasin</span></button></a>
-		<br>
-
+		<div class="cart__buttons">
+			<a href="{{ path('app_home')}}"><button class="btn btn-lg room__button__returnForum"><span>Retourner sur la page du magasin</span></button></a>
+			<a href="{{ path('app_stripe')}}"><button class="btn btn-lg btn-success cart__button-buy"><i class="fa-solid fa-cart-shopping fa-1x cart__icon-buy"></i>ACHETER</button></a>
+		</div>
 	</div>
 
 
