--- a/templates/home/gamesDisplay.html.twig
+++ b/templates/home/gamesDisplay.html.twig
@@ -6,7 +6,7 @@
 		{% for game in games|slice(0, 9) %}
 			<div class="col mt-3">
 				<a href="{{ path('app_game_show', {id: game.id}) }}">
-					<div class="categoryDiv gameDiv" style="background-image: url({{ game.PictureGame }})"></div>
+					<div class="categoryDiv gameDiv" style="background-image: url({{ game.PictureGame }}); background-size:100%;"></div>
 				</a>
 				<p class="mt-3">{{ game.NameGame }}</p>
 			</div>
